--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1517,6 +1517,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Terminals\Sections\BindKey.cshtml" />
     <Content Include="Views\InterChange\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutEdits.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
