--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1550,6 +1550,7 @@
     <Content Include="Views\InterChange\InterChangeForm.cshtml" />
     <Content Include="Views\Shared\_LayoutEdits.cshtml" />
     <Content Include="Views\DisputeRepresents\Create.cshtml" />
+    <Content Include="Views\DisputeRepresents\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
