funciona el export pdf

--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -34,10 +34,10 @@
   <system.web>
     <!-- Calls Customed Error Views -->
     <customErrors mode="RemoteOnly" defaultRedirect="~/Error">
-      <error redirect="~/Error/NotFound" statusCode="404"/>
-      <error redirect="~/Error/InternalServer" statusCode="500"/>
-      <error redirect="~/Error/BadGateway" statusCode="502"/>
-      <error redirect="~/Error/ServiceUnavailable" statusCode="503"/>
+      <error redirect="~/Error/NotFound" statusCode="404" />
+      <error redirect="~/Error/InternalServer" statusCode="500" />
+      <error redirect="~/Error/BadGateway" statusCode="502" />
+      <error redirect="~/Error/ServiceUnavailable" statusCode="503" />
     </customErrors>
     <!-- End of Calls Customed Error Views -->
     <compilation debug="true" targetFramework="4.6.1" />
@@ -119,11 +119,7 @@
   <system.net>
     <mailSettings>
       <smtp>
-        <network host="smtp.live.com"
-                 enableSsl="true"
-                 port="25"
-                 userName="xyncro.octagon@outlook.com"
-                 password="Xyncro2017" />
+        <network host="smtp.live.com" enableSsl="true" port="25" userName="xyncro.octagon@outlook.com" password="Xyncro2017" />
       </smtp>
     </mailSettings>
   </system.net>
