--- a/OctagonPlatform/packages.config
+++ b/OctagonPlatform/packages.config
@@ -8,6 +8,8 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.12" targetFramework="net461" />
+  <package id="itextsharp.xmlworker" version="5.5.12" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.11" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
